--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 venv/
 .idea/
-pikabu_proj/db.sqlite3
-pikabu_proj/__pycache__/*
-pikadu_app/migrations/*
+pikadu_proj/db.sqlite3
+pikadu_proj/__pycache__/**
+pikadu_app/migrations/**
+pikadu_proj/__pycache__/.
+pikadu_app/migrations/.
